# osxcross-test

./: .gitignore
CMakeRunnable/: CMakeLists.txt  gl31test.cpp  shared.cmake  unix_stub.cpp  unix_stub.h
CMakeRunnable/GL/: glew.h
CMakeRunnable/data/: sprite.frag  sprite.vert  test.frag  test.vert
CMakeRunnable/sdl/include/: SDL_config_windows.h  SDL_joystick.h  SDL_stdinc.h
SuperSimple/: simple_make_native.sh  simple_make_osxcross.sh  simple_make_osxcross_works.sh  simple_test.cpp
SuperSimple/binaries/: libglew.a.bad  libglew.a.good
SuperSimple/glew/: CMakeLists.txt
